<resources>
    <string name="app_name">UnscrambleGame</string>
    <string name="submit">submit</string>
    <string name="skip">Skip</string>
    <string name="hint">Enter word</string>
    <string name="congratulations">Congratulations!</string>
    <string name="scored">Score: %s\nCorrect: %s\nIncorrect: %s\nSkips: %s</string>
    <string name="play_again">Play again</string>
    <string name="exit">Exit</string>
    <string name="error">Not correct</string>
    <string name="retry">retry</string>
</resources>